Made stylesheet path relative in import.css
No longer absolute, since that path may not exist.

--- a/stylesheets/css/import.css
+++ b/stylesheets/css/import.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
-@import "/stylesheets/normalize/normalize.css";
-@import "/stylesheets/core-css/viewport.css";
-@import "/stylesheets/core-css/details.css";
-@import "/stylesheets/core-css/dialog.css";
-@import "/stylesheets/core-css/animations.css";
-@import "/stylesheets/core-css/links.css";
-@import "/stylesheets/core-css/class_rules.css";
-@import "/stylesheets/core-css/misc.css";
-@import "/stylesheets/core-css/fonts.css";
+@import "../normalize/normalize.css";
+@import "../core-css/viewport.css";
+@import "../core-css/details.css";
+@import "../core-css/dialog.css";
+@import "../core-css/animations.css";
+@import "../core-css/links.css";
+@import "../core-css/class_rules.css";
+@import "../core-css/misc.css";
+@import "../core-css/fonts.css";
 @import "custom.css";
 @import "sidebar.css";
 @import "mobile.css";
